<resources>
    <string name="app_name">FixIt</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Log_In">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="Fix_It">Fix It</string>
    <string name="remember_me">Remember Me</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="backarrow">BackArrow</string>
    <string name="back">Back</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="agree_to_terms_and_conditions">Agree to Terms and Conditions</string>
    <string name="recieve_updates_and_news">Recieve updates and news</string>
    <string name="hello">Hello</string>
    <string name="todo">TODO</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="request_service">Request Service</string>
    <string name="menu">Menu</string>
    <string name="Profile">Profile</string>
    <string name="Services">Services</string>
    <string name="Notifications">Notifications</string>
    <string name="About">About</string>
    <string name="LogOut">Log Out</string>
    <string name="Home">Home</string>
    <string name="service">Service</string>
</resources>