<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/SignUptxtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/baloo"
        android:shadowColor="#4C4C4C"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="3"
        android:text="@string/sign_up"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_edttxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/baloo"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUptxtview" />

    <EditText
        android:id="@+id/email_edttxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/baloo"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        app:layout_constraintStart_toStartOf="@+id/name_edttxt"
        app:layout_constraintTop_toBottomOf="@+id/name_edttxt" />

    <EditText
        android:id="@+id/password_edttxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/baloo"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        app:layout_constraintStart_toStartOf="@+id/email_edttxt"
        app:layout_constraintTop_toBottomOf="@+id/email_edttxt" />

    <EditText
        android:id="@+id/confirmpassword_edttxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/baloo"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edttxt" />

    <EditText
        android:id="@+id/phone-edttxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/baloo"
        android:hint="@string/phone"
        android:inputType="phone"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        app:layout_constraintStart_toStartOf="@+id/confirmpassword_edttxt"
        app:layout_constraintTop_toBottomOf="@+id/confirmpassword_edttxt" />

    <Button
        android:id="@+id/SignUp_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="162dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/baloo"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RecieveNews_switch"
        app:layout_constraintVertical_bias="0.04000002" />

    <Switch
        android:id="@+id/Agree_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/baloo"
        android:paddingStart="0sp"
        android:paddingEnd="140sp"
        android:text="@string/agree_to_terms_and_conditions"
        android:textColor="#353434"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/phone-edttxt"
        app:layout_constraintTop_toBottomOf="@+id/phone-edttxt"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/RecieveNews_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baloo"
        android:paddingStart="0sp"
        android:paddingEnd="140sp"
        android:text="@string/recieve_updates_and_news"
        android:textColor="#353434"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/Agree_switch"
        app:layout_constraintTop_toBottomOf="@+id/Agree_switch"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</androidx.constraintlayout.widget.ConstraintLayout>