<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainScreen"
    android:id="@+id/DrawerLayout">




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".MainScreen">

        <SearchView
            android:id="@+id/searchBar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/username_txtview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/username_txtview"
            android:queryHint="Enter Address..."
            android:elevation="10dp"
            android:background="@drawable/custom_searchbar"/>


        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:context=".MapsActivity" />

        <ImageView
            android:id="@+id/menu_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/menu"
            app:layout_constraintBottom_toTopOf="@+id/blank_txtview"
            app:layout_constraintStart_toStartOf="@+id/blank_txtview"
            app:srcCompat="@drawable/ic_menu" />

        <Button
            android:id="@+id/request_btn"
            android:layout_width="262dp"
            android:layout_height="44dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/custom_buttonrequest"
            android:fontFamily="@font/baloo"
            android:text="@string/request_service"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/map"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/username_txtview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/baloo"
            android:shadowColor="#595858"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="2"
            android:textColor="#EFEFEF"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/blank_txtview"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toEndOf="@+id/blank_txtview"
            app:layout_constraintTop_toTopOf="@+id/blank_txtview"
            tools:text="Name" />

        <TextView
            android:id="@+id/blank_txtview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/alfa_slab_one"
            android:paddingStart="1dp"
            android:paddingEnd="1dp"
            android:shadowColor="#595858"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="3"
            android:text="@string/hello"
            android:textColor="#EFEFEF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/drawer_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        tools:ignore="RtlHardcoded"
        app:menu="@menu/navigation_menu"
        app:headerLayout="@layout/navigation_header"/>

</androidx.drawerlayout.widget.DrawerLayout>